<resources>
    <string name="app_name">Calculator</string>
    <string name="app_name_display">Calculator</string>

    <string name="select_theme_title">Select Theme</string>

    <string name="zero" translatable="false">0</string>
    <string name="one" translatable="false">1</string>
    <string name="two" translatable="false">2</string>
    <string name="three" translatable="false">3</string>
    <string name="four" translatable="false">4</string>
    <string name="five" translatable="false">5</string>
    <string name="six" translatable="false">6</string>
    <string name="seven" translatable="false">7</string>
    <string name="eight" translatable="false">8</string>
    <string name="nine" translatable="false">9</string>

    <string name="clear" translatable="false">AC</string>
    <string name="parentheses" translatable="false">(  )</string>
    <string name="add" translatable="false">+</string>
    <string name="subtract" translatable="false">−</string>
    <string name="point" translatable="false">.</string>
    <string name="equals" translatable="false">=</string>
    <string name="divide" translatable="false">÷</string>
    <string name="multiply" translatable="false">×</string>
    <string name="exponent" translatable="false">^</string>
    <string name="backspace" translatable="false"> </string>

    <string name="divideBy100" translatable="false">%</string>
    <string name="degree" translatable="false">DEG</string>
    <string name="sine" translatable="false">sin</string>
    <string name="sineInv" translatable="false">sin⁻¹</string>
    <string name="cosine" translatable="false">cos</string>
    <string name="cosineInv" translatable="false">cos⁻¹</string>

    <string name="tangent" translatable="false">tan</string>
    <string name="tangentInv" translatable="false">tan⁻¹</string>
    <string name="inv" translatable="false">INV</string>
    <string name="e" translatable="false">e</string>
    <string name="naturalLogarithm" translatable="false">ln</string>
    <string name="naturalLogarithmInv" translatable="false">e^</string>

    <string name="logarithm" translatable="false">log</string>
    <string name="logarithmInv" translatable="false">10^</string>
    <string name="pi" translatable="false">π</string>
    <string name="factorial" translatable="false">!</string>
    <string name="square" translatable="false">√</string>
    <string name="squareInv" translatable="false">x²</string>

    <!-- App Menu -->
    <string name="app_menu_theme">Theme</string>
    <string name="app_menu_vibration">Vibration</string>
    <string name="app_menu_clear_history">Clear History</string>
    <string name="app_menu_github" translatable="false">GitHub</string>
    <string name="app_menu_about">About</string>

    <!-- Theme choices -->
    <string name="theme_system">System</string>
    <string name="theme_amoled">Amoled</string>
    <string name="theme_material_you">Material You</string>
    <string name="theme_light">Light</string>
    <string name="theme_dark">Dark</string>

    <!-- Others -->
    <string name="value_copied">Copied</string>
    <string name="infinity">Infinity</string>
    <string name="division_by_0">Can\'t divide by 0</string>
    <string name="domain_error">Domain error</string>
    <string name="math_error">Math error</string>
    <string name="syntax_error">Syntax error</string>
    <string name="value_too_large">Value too large</string>
    <string name="Calculator">Calclator</string>
    <string name="sin">sin</string>
    <string name="cos">cos</string>
    <string name="tan">tan</string>
    <string name="arcsin">sin⁻¹</string>
    <string name="arccos">cos⁻¹</string>
    <string name="arctan">tan⁻¹</string>
    <string name="cancel">CANCEL</string>
    <string name="sinh">sinh</string>
    <string name="cosh">cosh</string>
    <string name="tanh">tanh</string>
    <string name="asinh">sinh⁻¹</string>
    <string name="acosh">cosh⁻¹</string>
    <string name="atanh">tanh⁻¹</string>
    <!-- to toggle the open close button of the navigation drawer -->
    <string name="nav_open">Open</string>
    <string name="nav_close">Close</string>
    <string name="amount_of_water_needed_to_drink">Amount of water needed to drink</string>
    <string name="history">History</string>
    <string name="ok">OK</string>

    <!-- Todolist   -->
    <string name="list_todo_title">Việc cần làm</string>
    <string name="new_todo_item">Thêm công việc mới</string>
    <string name="todo_item_detail">Chi tiết công việc</string>
    <string name="title_activity_todo_detail">TodoDetailActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>

    <string name="str_todo_title">Việc cần thực hiện</string>
    <string name="str_hint_et_new_todo_title">Nhập nhiệm vụ tại đây</string>
    <string name="str_deadline_title">Ngày đáo hạn</string>
    <string name="str_add_to_type">Lặp lại hằng ngày</string>
    <string name="str_default">Không lặp lại</string>
    <string name="add_new_mission">Thêm nhiệm vụ mới</string>
    <string name="todo_list">Danh sách việc cần làm</string>
    <string name="update_todo">Cập nhật nhiệm vụ</string>

    <!-- Money management      -->
    <string name="money_management">Money Management</string>
    <string name="classification_settings">Classification Settings</string>
    <string name="money_management_chart">Money Management Chart</string>
    <string name="start_date">Start date:</string>
    <string name="end_date">End date:</string>
    <string name="add_new_spending">Add new spending</string>
    <string name="date">Date:</string>
    <string name="time">Time:</string>
    <string name="today">Today</string>
    <string name="cost">Cost:</string>
    <string name="note">Note:</string>
    <string name="type">Type:</string>

    <string-array name="repeat_arr_spinner">
        <item>Không lặp lại</item>
        <item>Lặp lại</item>
    </string-array>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="add_new_classification">+ Add new</string>
    <string name="expense">Expense</string>
    <string name="income">Income</string>
</resources>