<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#E1E1E1"
    >
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/_40sdp"
        android:background="@color/black"
        android:layout_marginBottom="@dimen/_5sdp"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/_16ssp"
            android:text="@string/Calculator"
            android:textColor="@color/white"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_alignParentBottom="true"
            android:gravity="center"
            android:layout_marginStart="@dimen/_16sdp"
            />
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingVertical="@dimen/_5sdp"
        android:paddingHorizontal="@dimen/_10sdp"
        >
        <RelativeLayout
            android:id="@+id/sin"
            android:layout_width="0dp"
            android:layout_height="@dimen/_40sdp"
            android:background="@drawable/background_item_white"
            android:layout_weight="1"
            android:gravity="center"
            >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/_16ssp"
                android:text="@string/sin"
                android:textColor="@color/black"
                android:layout_centerInParent="true"
                />
        </RelativeLayout>
        <RelativeLayout
            android:id="@+id/cos"
            android:layout_width="0dp"
            android:layout_height="@dimen/_40sdp"
            android:background="@drawable/background_item_white"
            android:layout_weight="1"
            android:layout_marginHorizontal="@dimen/_10sdp"
            android:gravity="center"
            >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/_16ssp"
                android:text="@string/cos"
                android:textColor="@color/black"
                android:gravity="center"
                />
        </RelativeLayout>
        <RelativeLayout
            android:id="@+id/tan"
            android:layout_width="0dp"
            android:layout_height="@dimen/_40sdp"
            android:background="@drawable/background_item_white"
            android:layout_weight="1"
            android:gravity="center"
            >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/_16ssp"
                android:text="@string/tan"
                android:textColor="@color/black"
                android:gravity="center"
                />
        </RelativeLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingVertical="@dimen/_5sdp"
        android:paddingHorizontal="@dimen/_10sdp"
        >
        <RelativeLayout
            android:id="@+id/arcsin"
            android:layout_width="0dp"
            android:layout_height="@dimen/_40sdp"
            android:background="@drawable/background_item_white"
            android:layout_weight="1"
            android:gravity="center"
            >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:text="@string/arcsin"
                android:textColor="@color/black"
                android:textSize="@dimen/_16ssp" />
        </RelativeLayout>
        <RelativeLayout
            android:id="@+id/arccos"
            android:layout_width="0dp"
            android:layout_height="@dimen/_40sdp"
            android:background="@drawable/background_item_white"
            android:layout_weight="1"
            android:layout_marginHorizontal="@dimen/_10sdp"
            android:gravity="center"
            >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/_16ssp"
                android:text="@string/arccos"
                android:textColor="@color/black"
                android:gravity="center"
                />
        </RelativeLayout>
        <RelativeLayout
            android:id="@+id/arctan"
            android:layout_width="0dp"
            android:layout_height="@dimen/_40sdp"
            android:background="@drawable/background_item_white"
            android:layout_weight="1"
            android:gravity="center"
            >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/_16ssp"
                android:text="@string/arctan"
                android:textColor="@color/black"
                android:gravity="center"
                />
        </RelativeLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingVertical="@dimen/_5sdp"
        android:paddingHorizontal="@dimen/_10sdp"
        >
        <RelativeLayout
            android:id="@+id/sinh"
            android:layout_width="0dp"
            android:layout_height="@dimen/_40sdp"
            android:background="@drawable/background_item_white"
            android:layout_weight="1"
            android:gravity="center"
            >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:text="@string/sinh"
                android:textColor="@color/black"
                android:textSize="@dimen/_16ssp" />
        </RelativeLayout>
        <RelativeLayout
            android:id="@+id/cosh"
            android:layout_width="0dp"
            android:layout_height="@dimen/_40sdp"
            android:background="@drawable/background_item_white"
            android:layout_weight="1"
            android:layout_marginHorizontal="@dimen/_10sdp"
            android:gravity="center"
            >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/_16ssp"
                android:text="@string/cosh"
                android:textColor="@color/black"
                android:gravity="center"
                />
        </RelativeLayout>
        <RelativeLayout
            android:id="@+id/tanh"
            android:layout_width="0dp"
            android:layout_height="@dimen/_40sdp"
            android:background="@drawable/background_item_white"
            android:layout_weight="1"
            android:gravity="center"
            >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/_16ssp"
                android:text="@string/tanh"
                android:textColor="@color/black"
                android:gravity="center"
                />
        </RelativeLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingVertical="@dimen/_5sdp"
        android:paddingHorizontal="@dimen/_10sdp"
        >
        <RelativeLayout
            android:id="@+id/asinh"
            android:layout_width="0dp"
            android:layout_height="@dimen/_40sdp"
            android:background="@drawable/background_item_white"
            android:layout_weight="1"
            android:gravity="center"
            >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:text="@string/asinh"
                android:textColor="@color/black"
                android:textSize="@dimen/_16ssp" />
        </RelativeLayout>
        <RelativeLayout
            android:id="@+id/acosh"
            android:layout_width="0dp"
            android:layout_height="@dimen/_40sdp"
            android:background="@drawable/background_item_white"
            android:layout_weight="1"
            android:layout_marginHorizontal="@dimen/_10sdp"
            android:gravity="center"
            >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/_16ssp"
                android:text="@string/acosh"
                android:textColor="@color/black"
                android:gravity="center"
                />
        </RelativeLayout>
        <RelativeLayout
            android:id="@+id/atanh"
            android:layout_width="0dp"
            android:layout_height="@dimen/_40sdp"
            android:background="@drawable/background_item_white"
            android:layout_weight="1"
            android:gravity="center"
            >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/_16ssp"
                android:text="@string/atanh"
                android:textColor="@color/black"
                android:gravity="center"
                />
        </RelativeLayout>
    </LinearLayout>

    <RelativeLayout
        android:id="@+id/cancel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_marginTop="@dimen/_10sdp"
        android:layout_marginBottom="@dimen/_10sdp"
        >

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_marginHorizontal="@dimen/_10sdp"
            android:background="@drawable/background_item_white"
            android:padding="@dimen/_4sdp"
            android:text="@string/cancel"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="@dimen/_16sdp" />
    </RelativeLayout>
</LinearLayout>