<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.WaterNeedActivity">

    <TextView
        android:id="@+id/txt_weight"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_16sdp"
        android:layout_marginTop="32dp"
        android:text="Weight(kg)"
        android:textColor="@color/black"
        android:textSize="@dimen/_14ssp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/txt_amount_water"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="Amount of water(ml)"
        android:textColor="@color/black"
        android:textSize="@dimen/_14ssp"
        app:layout_constraintStart_toStartOf="@+id/txt_weight"
        app:layout_constraintTop_toBottomOf="@+id/txt_weight" />

    <EditText
        android:cursorVisible="false"
        android:focusable="false"
        android:id="@+id/input"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/_8sdp"
        app:layout_constraintBottom_toBottomOf="@+id/txt_weight"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/txt_amount_water"
        app:layout_constraintTop_toTopOf="@+id/txt_weight"
        android:inputType="number"
        android:maxLength="3"
        />

    <EditText
        android:id="@+id/resultDisplay"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/_8sdp"
        android:cursorVisible="false"
        android:focusable="false"
        app:layout_constraintBottom_toBottomOf="@+id/txt_amount_water"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/txt_amount_water"
        app:layout_constraintTop_toTopOf="@+id/txt_amount_water" />
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="@dimen/_40sdp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/resultDisplay">

        <TableLayout
            android:id="@+id/tableLayout"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:paddingHorizontal="8dp"
            android:paddingTop="12dp"
            android:paddingBottom="0dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="parent">


            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="3">

                <Button
                    android:id="@+id/sevenButton"
                    style="@style/CalculatorButton"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:onClick="keyDigitPadMappingToDisplay"
                    android:text="@string/seven" />

                <Button
                    android:id="@+id/eightButton"
                    style="@style/CalculatorButton"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:onClick="keyDigitPadMappingToDisplay"
                    android:text="@string/eight" />

                <Button
                    android:id="@+id/nineButton"
                    style="@style/CalculatorButton"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:onClick="keyDigitPadMappingToDisplay"
                    android:text="@string/nine" />

            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="3">

                <Button
                    android:id="@+id/fourButton"
                    style="@style/CalculatorButton"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:onClick="keyDigitPadMappingToDisplay"
                    android:text="@string/four" />

                <Button
                    android:id="@+id/fiveButton"
                    style="@style/CalculatorButton"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:onClick="keyDigitPadMappingToDisplay"
                    android:text="@string/five" />

                <Button
                    android:id="@+id/sixButton"
                    style="@style/CalculatorButton"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:onClick="keyDigitPadMappingToDisplay"
                    android:text="@string/six" />


            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="3">

                <Button
                    android:id="@+id/oneButton"
                    style="@style/CalculatorButton"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:onClick="keyDigitPadMappingToDisplay"
                    android:text="@string/one" />

                <Button
                    android:id="@+id/twoButton"
                    style="@style/CalculatorButton"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:onClick="keyDigitPadMappingToDisplay"
                    android:text="@string/two" />

                <Button
                    android:id="@+id/threeButton"
                    style="@style/CalculatorButton"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:onClick="keyDigitPadMappingToDisplay"
                    android:text="@string/three" />

            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="3">

                <Button
                    android:id="@+id/zeroButton"
                    style="@style/CalculatorButton"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:onClick="keyDigitPadMappingToDisplay"
                    android:text="@string/zero" />

                <ImageButton
                    android:id="@+id/pointButton"
                    style="@style/CalculatorButton"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:onClick="pointButton"
                    app:srcCompat="@drawable/dot" />

                <ImageButton
                    android:id="@+id/backspaceButton"
                    style="@style/CalculatorButton"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:contentDescription="@string/backspace"
                    android:onClick="backspaceButton"
                    android:paddingEnd="5dp"
                    app:srcCompat="@drawable/backspace" />

                <Button
                    android:id="@+id/clearButton"
                    style="@style/CalculatorButton"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:backgroundTint="?attr/button_clear_color"
                    android:onClick="clearButton"
                    android:text="@string/clear"
                    android:textSize="24sp" />
            </TableRow>
        </TableLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>